# riptidecrawler

./: .check_readable.txt  .clippy_readable.txt  .codecov.yml  .commented_code.txt  .crate_attrs.txt  .debt_summary.md  .dockerignore  .env  .env.example  .env.pdfium  .gitignore  .rustfmt.toml  .signal_summary.txt  .spectral.yaml  .todos.txt  .udeps.txt  .verification_check.txt  .verification_clippy.txt  .warnings_detailed.txt  AUTHORIZATION_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_TEST_SUMMARY.md  COMPLETED.md  COVERAGE_IMPLEMENTATION.md  Cargo.toml  DELIVERABLES.md  DEPLOYMENT-SUMMARY.txt  DOCKER-DEPLOYMENT.md  Dockerfile  FILES-CREATED.md  IMPLEMENTATION_COMPLETE.md  Justfile  Makefile  PDFIUM_RESOLUTION.md  PHASE_0_COMPLETION_SUMMARY.md  README.md  README_PDFIUM.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_ResourceManager_v1.0.md  (+50 more)
benches/: Cargo.toml  README.md  facade_benchmark.rs  hybrid_launcher_benchmark.rs  performance_benchmarks.rs  verify_benchmarks.sh  wasm_performance.rs
cli-spec/: Cargo.toml  TEST-REPORT.md  cli.yaml  spec.yaml
cli-spec/src/: lib.rs  parser.rs  types.rs  validation.rs
cli-spec/tests/: README.md  spec_validation.rs
crates/riptide-api/: Cargo.toml  README.md  build.rs
crates/riptide-browser/: ARCHITECTURE.md  CONSOLIDATION-PLAN.md  Cargo.toml  README.md
crates/riptide-browser-abstraction/: Cargo.toml  README.md
crates/riptide-cache/: Cargo.toml  README.md
crates/riptide-cli/: Cargo.toml  README.md
crates/riptide-config/: Cargo.toml  README.md
crates/riptide-core/: Cargo.toml  README.md
crates/riptide-engine/: CDP-MULTIPLEXING.md  Cargo.toml  README.md
crates/riptide-events/: Cargo.toml  README.md
crates/riptide-extraction/: CHUNKING_IMPLEMENTATION.md  Cargo.toml  README.md
crates/riptide-facade/: AUTHORIZATION.md  COMPREHENSIVE_TEST_AUDIT.md  Cargo.toml  README.md
crates/riptide-fetch/: Cargo.toml  README.md
crates/riptide-headless/: Cargo.toml  README.md
crates/riptide-headless-hybrid/: Cargo.toml  README.md
crates/riptide-html/: CHUNKING_IMPLEMENTATION.md  Cargo.toml  README.md  build.rs
crates/riptide-intelligence/: Cargo.toml  README.md
crates/riptide-monitoring/: Cargo.toml  README.md
crates/riptide-pdf/: Cargo.toml  README.md
crates/riptide-performance/: Cargo.toml  README.md
crates/riptide-persistence/: Cargo.toml  README.md
crates/riptide-pipeline/: Cargo.toml  README.md
crates/riptide-pool/: Cargo.toml  README.md
crates/riptide-py/: Cargo.toml  MANIFEST.in  PACKAGING.md  README.md  build.sh  pyproject.toml  pytest.ini  riptide.pyi  test-wheel.sh
crates/riptide-reliability/: Cargo.toml  README.md
python-sdk/: .deprecated  IMPLEMENTATION_COMPLETE.txt  MANIFEST.in  PHASE2_IMPLEMENTATION.md  PUBLISHING.md  README.md  pyproject.toml
python-sdk/examples/: phase2_usage.py
python-sdk/riptide_client/: __init__.py  client.py  exceptions.py  types.py
python-sdk/tests/: test_client.py
tests/: Cargo.toml  EXECUTION-GUIDE.md  FINAL-PRODUCTION-VERIFICATION.md  HYBRID-DEPLOYMENT-SUMMARY.md  INDEX-VERIFICATION-FILES.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SUMMARY.md  README-VERIFICATION.md  README.md  TASK-COMPLETION-SUMMARY.md  TDD_COMPLETION_SUMMARY.md  TDD_INTEGRATION_TESTS.md  TESTING_REPORT.md  TEST_RESULTS_STEALTH_SPIDER.md  TEST_URL_RESEARCH.md  VALIDATION_REPORT.md  VERIFICATION-SUITE-SUMMARY.md  api-logs.txt  benchmark-times.txt  comprehensive_test.sh  comprehensive_test_suite.sh  coverage_improvement_report.md  direct-fetch-test-results.md  docker-post-build-test.sh  docker-pre-flight-check.sh  docker-quick-test.sh  docker-static-analysis.sh  docker-validation-suite.sh  e2e_tests.rs  enhancement-test-strategy.md  error_handling_comprehensive.rs  extractor_fallback_tests.rs  fallback-test-response.json  fix_topic_chunker.rs  full-api-logs.txt  golden_test_cli.rs  headless-render-test-results.md  headless-render-test.sh  hive-mind-wiring-validation-report.md  html_extraction_tests.rs  (+44 more)
tests/api/: complete_api_coverage_tests.rs  dredd-tests.yml  dynamic_rendering_tests.rs  extraction_api_tests.sh  spider_result_mode_tests.sh
tests/batch2b/: llm_pool_integration_tests.rs  mod.rs  native_pool_comprehensive_tests.rs  wasm_pool_comprehensive_tests.rs
tests/benches/: search_provider_benchmarks.rs
tests/benchmarks/: baselines.json
tests/cache-consistency/: cache_key_tests.rs  mod.rs  test_cache_key_consistency.rs
tests/chaos/: edge_cases_tests.rs  error_handling_comprehensive.rs  error_resilience_tests.rs  failure_injection_tests.rs
tests/cli/: Cargo.toml  REAL_WORLD_TEST_RESULTS.md  TEST_SUMMARY.md  cli_api_integration.rs  e2e_tests.rs  e2e_workflow.rs  fallback_tests.rs  integration_tests.rs  mod.rs  performance_tests.rs  real_api_tests.rs  real_world_integration.rs  run_tests.sh  test_coverage_analysis.md
tests/common/: README.md  baseline_manager.rs  content_validator.rs  mock_server.rs  mod.rs  test_harness.rs  timeouts.rs
tests/component/: mod.rs
tests/confidence-scoring/: confidence_integration_tests.rs  confidence_scoring_tests.rs  mod.rs
tests/docs/: BEST_PRACTICES.md  CATEGORY_MATRIX.md  CLI_TESTING_RESEARCH.md  NAMING_CONVENTIONS.md  PHASE6-COMPLETION-SUMMARY.md  PHASE6-TESTING-REPORT.md  PHASE6_CLI_TESTING.md  PHASE6_COMPLETION_REPORT.md  PHASE6_COVERAGE_ANALYSIS.md  PHASE6_TEST_STRATEGY.md  README.md  REORGANIZATION_SUMMARY.md  TESTING_GUIDE.md  TEST_ORGANIZATION_PLAN.md  TEST_REORGANIZATION_MAPPING.md  TEST_STRUCTURE_SUMMARY.md  coverage-analysis-report.md  coverage-best-practices.md  coverage-guide.md  priority-1-completion-report.md  test-organization-analysis.md  test-organization-summary.md
tests/e2e/: e2e_api.rs  mod.rs  real_world_tests.rs  spider_discover_extract_workflow_tests.rs
tests/extractions/: batch_result.json  livehilversum_result.json
tests/feature_flags/: feature_flag_tests.rs
tests/fixtures/: circuit_breaker_scenarios.json  contract_definitions.rs  large_article.html  mock_services.rs  mod.rs  recorded_responses.rs  search_results.json  spa_fixtures.rs  test_data.rs
tests/golden/: baseline_update_tests.rs  mod.rs  (+9 more)
(+3716 files in other folders)
