[workspace]
members = [
  "crates/riptide-core",
  "crates/riptide-api",
  "crates/riptide-headless",
  "crates/riptide-workers",
  "wasm/riptide-extractor-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["RipTide Team"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "ws"] }  # Keep 0.7 for stability
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
http = "1"
hyper = { version = "1", features = ["full"] }
once_cell = "1"
rand = "0.8"
redis = { version = "0.26", features = ["tokio-comp"] }  # Updated from 0.25
reqwest = { version = "0.12", features = ["gzip", "brotli", "json", "cookies", "http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = [] }  # Updated from 0.4
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "decompression-full"] }  # Updated from 0.5
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry = "0.26"
opentelemetry-otlp = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.26"
tracing-opentelemetry = "0.27"
regex = "1.10"
sysinfo = "0.32"
psutil = "3.3"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
lol_html = "2"  # Updated from 1
wasmtime = { version = "26", features = ["cache", "component-model"] }  # Keep 26 for compatibility
wasmtime-wasi = "26"
chromiumoxide = "0.7"  # Keep for stability
spider = "2"
pdfium-render = { version = "0.8", features = ["sync", "thread_safe"] }

# Performance optimization settings
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Integration tests configuration

# Optional safety switch (leave commented by default):
# [patch.crates-io]
# trek-rs = { git = "https://github.com/officialunofficial/trek.git", rev = "PUT_A_PINNED_COMMIT" }