[workspace]
members = [
  "crates/riptide-types",
  "crates/riptide-utils",  # Phase 0 Week 0-1: Shared utilities
  # P2-F1 Day 6: riptide-core ELIMINATED - functionality distributed to specialized crates
  "crates/riptide-spider",  # P1-C2: Spider/crawler engine (extracted from core)
  "crates/riptide-fetch",   # P1-C2: HTTP/network layer (extracted from core)
  "crates/riptide-security",  # P1-A3: Security middleware (extracted from core)
  "crates/riptide-monitoring",  # P1-A3: Monitoring and telemetry (extracted from core)
  "crates/riptide-events",  # P1-A3 Phase 2A: Event system (extracted from core)
  "crates/riptide-pool",  # P1-A3 Phase 2B: Instance pool (extracted from core)
  "crates/riptide-extraction",
  "crates/riptide-search",
  "crates/riptide-api",
  "crates/riptide-cli",
  "crates/riptide-headless",
  "crates/riptide-workers",
  "crates/riptide-intelligence",
  "crates/riptide-persistence",
  "crates/riptide-streaming",
  "crates/riptide-stealth",
  "crates/riptide-pdf",
  "crates/riptide-performance",
  "crates/riptide-browser-abstraction",  # Phase 1 Week 3 - Browser abstraction layer
  "crates/riptide-facade",  # P1-C3: High-level facade API
  "crates/riptide-pipeline",  # Week 9: Pipeline orchestrator (breaks riptide-api circular dependency)
  "wasm/riptide-extractor-wasm", "crates/riptide-test-utils", "crates/riptide-config", "crates/riptide-cache", "crates/riptide-reliability", "crates/riptide-browser",
  "cli-spec",  # CLI specification parser and validator
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
authors = ["RipTide Team"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "ws"] }  # Keep 0.7 for stability
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
http = "1"
hyper = { version = "1", features = ["full"] }
once_cell = "1"
rand = "0.8"
redis = { version = "0.26", features = ["tokio-comp"] }  # Updated from 0.25
reqwest = { version = "0.12", features = ["gzip", "brotli", "json", "cookies", "http2", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "process"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = [] }  # Updated from 0.4
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "decompression-full"] }  # Updated from 0.5
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry = "0.26"
opentelemetry-otlp = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.26"
tracing-opentelemetry = "0.27"
regex = "1.10"
sysinfo = "0.32"
psutil = "3.3"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
lol_html = "2"  # Updated from 1
scraper = "0.20"
wasmtime = { version = "37", features = ["cache", "component-model"] }  # Upgraded to 37 for simplified WASI API and better test support
wasmtime-wasi = "37"
spider_chrome = "2.37.128"  # High-concurrency CDP (replaces chromiumoxide)
spider = "2"
spider_chromiumoxide_cdp = "0.7.4"  # Spider's CDP fork - replaces standard chromiumoxide
pdfium-render = { version = "0.8", features = ["sync", "thread_safe"] }
env_logger = { version = "0.10" }
tempfile = { version = "3" }
dashmap = "6.1"
wiremock = "0.6"
schemars = { version = "0.8", features = ["chrono"] }
libc = "0.2"  # For Unix syscalls (disk/fd tracking)
hdrhistogram = "7.5"  # For accurate percentile calculations
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_Debug", "Win32_Storage_FileSystem", "Win32_System_Threading"] }  # For Windows disk/fd tracking
tikv-jemalloc-ctl = { version = "0.6", features = ["use_std"] }  # For detailed memory statistics
sha2 = "0.10"
base64 = "0.22"
governor = "0.6"
hex = "0.4"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
fastrand = "2"
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.0"

# Performance optimization settings
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false  # Disable for release builds to improve optimization

# Development profile optimized for faster builds
[profile.dev]
opt-level = 0
debug = 2
incremental = true
codegen-units = 256  # More parallel compilation
split-debuginfo = "unpacked"  # Faster linking on supported platforms

# CI-optimized profile for faster builds in CI
[profile.ci]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true
codegen-units = 16

# Fast compilation profile for development iteration
[profile.fast-dev]
inherits = "dev"
opt-level = 1
debug = 1
codegen-units = 512
incremental = true

# WASM-optimized build profile
[profile.wasm]
inherits = "release"
opt-level = "s"          # Optimize for size
lto = "fat"              # Full link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Reduce binary size
strip = true             # Strip debug symbols
incremental = false      # Disable for better optimization

# WASM development profile for faster iteration
[profile.wasm-dev]
inherits = "dev"
opt-level = 1
lto = "off"
codegen-units = 4
panic = "abort"
incremental = true

# Build caching and workspace optimization
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.cargo-machete]
ignored = ["vergen"]  # Keep build dependencies

# Integration tests configuration

# Legacy dependency removed - using scraper-based approach for WASM compatibility

