[package]
name = "cli-spec"
version = "0.1.0"
edition = "2021"
authors = ["RipTide Team"]
description = "CLI specification parser and validator for RipTide"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
