[package]
name = "search-provider-tests"
version = "0.1.0"
edition = "2021"

# Empty workspace to avoid conflict with parent workspace
[workspace]

[lib]
name = "search_provider_tests"
path = "lib.rs"

[dependencies]
# Async runtime for testing
tokio = { version = "1.0", features = ["full"] }

# HTTP client for testing external APIs
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing and validation
url = "2.4"

# Regular expressions for URL detection
regex = "1.10"

# Future utilities for concurrent testing
futures = "0.3"

# Testing framework extensions
tokio-test = "0.4"

[dev-dependencies]
# Mocking framework
mockall = "0.12"
wiremock = "0.6"

# Test utilities
assert_matches = "1.5"

# Property-based testing
proptest = "1.4"

# Criterion for benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_provider_benchmarks"
harness = false

[features]
default = []

# Enable network tests (requires API keys)
network-tests = []

# Enable performance benchmarks
benchmarks = []

# Enable additional debugging output in tests
test-debug = []