[package]
name = "riptide-api"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "riptide_api"
path = "src/lib.rs"

[[bin]]
name = "riptide-api"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
http = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
psutil = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["timeout"] }
tracing-subscriber = { workspace = true }
riptide-pdf = { path = "../riptide-pdf", features = ["pdf"] }
riptide-stealth = { path = "../riptide-stealth", features = ["stealth"] }
# Phase 1: WASM Optional - Use native-parser by default, wasm-extractor opt-in
riptide-extraction = { path = "../riptide-extraction", default-features = false, features = ["css-extraction", "regex-extraction", "dom-utils", "chunking", "native-parser"] }
riptide-types = { path = "../riptide-types" }
riptide-reliability = { path = "../riptide-reliability", features = ["reliability-patterns"] }
riptide-fetch = { path = "../riptide-fetch" }
riptide-cache = { path = "../riptide-cache" }
riptide-spider = { path = "../riptide-spider" }
riptide-events = { path = "../riptide-events" }
riptide-config = { path = "../riptide-config" }
riptide-intelligence = { path = "../riptide-intelligence" }
riptide-workers = { path = "../riptide-workers" }
riptide-browser = { path = "../riptide-browser" }
riptide-headless = { path = "../riptide-headless" }
riptide-search = { path = "../riptide-search" }
riptide-performance = { path = "../riptide-performance" }
riptide-persistence = { path = "../riptide-persistence" }
riptide-monitoring = { path = "../riptide-monitoring", features = ["collector"] }
riptide-facade = { path = "../riptide-facade" }
spider_chromiumoxide_cdp = { workspace = true }
spider_chrome = { workspace = true }
wasmtime = { workspace = true }
axum-prometheus = "0.7"
prometheus = "0.14"  # Updated to fix protobuf RUSTSEC-2024-0437
async-stream = "0.3"
base64 = "0.22"
hex = "0.4"
dashmap = { workspace = true }
serde_urlencoded = "0.7.1"

# jemalloc allocator for memory profiling (non-MSVC only)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }
tikv-jemalloc-ctl = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.8"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"
rstest = "0.22"
axum-extra = { version = "0.9" }
futures-util = "0.3"
tokio-tungstenite = "0.23"
http-body-util = "0.1"
serial_test = "3.2"
lazy_static = "1.4"

[features]
default = ["native-parser"]
# WIP feature gates for scaffolding code not yet fully wired
events = []           # EventEmitter/ResultTransformer in handlers/shared
sessions = []         # Session management system
streaming = []        # SSE/WebSocket/NDJSON streaming
telemetry = []        # Telemetry configuration
persistence = []      # Advanced caching and multi-tenancy with riptide-persistence
jemalloc = ["riptide-performance/jemalloc", "tikv-jemallocator", "tikv-jemalloc-ctl"]  # Real memory monitoring via riptide-performance's jemalloc
profiling-full = ["jemalloc", "riptide-performance/bottleneck-analysis-full"]  # Full profiling with flamegraphs (dev only)

# WASM Optional - Feature flags for extraction strategies
native-parser = ["riptide-extraction/native-parser"]     # Native Rust parser (default, fast)
wasm-extractor = ["riptide-extraction/wasm-extractor"]   # WASM-based extraction (opt-in)

# Full feature set for production (when ready)
full = ["events", "sessions", "streaming", "telemetry", "persistence", "jemalloc"]
