[package]
name = "riptide-api"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("postgres"))'] }

[lib]
name = "riptide_api"
path = "src/lib.rs"

[[bin]]
name = "riptide-api"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
http = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tokio-stream = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
psutil = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["timeout"] }
tracing-subscriber = { workspace = true }
riptide-pdf = { path = "../riptide-pdf", features = ["pdf"] }
riptide-stealth = { path = "../riptide-stealth", features = ["stealth"] }
# Phase 1: WASM Optional - Use native-parser by default, wasm-extractor opt-in
riptide-extraction = { path = "../riptide-extraction", default-features = false, features = ["css-extraction", "regex-extraction", "dom-utils", "chunking"], optional = true }
riptide-types = { path = "../riptide-types" }
riptide-reliability = { path = "../riptide-reliability", features = ["reliability-patterns"] }
riptide-fetch = { path = "../riptide-fetch", optional = true }
riptide-cache = { path = "../riptide-cache" }  # Sprint 1.3: Idempotency feature disabled due to redis-script issues
riptide-spider = { path = "../riptide-spider", optional = true }
riptide-events = { path = "../riptide-events" }
riptide-config = { path = "../riptide-config" }
riptide-intelligence = { path = "../riptide-intelligence", optional = true }
riptide-workers = { path = "../riptide-workers", optional = true }
riptide-browser = { path = "../riptide-browser", optional = true }
riptide-headless = { path = "../riptide-headless", optional = true }
riptide-search = { path = "../riptide-search", optional = true }
riptide-performance = { path = "../riptide-performance" }
riptide-persistence = { path = "../riptide-persistence" }
riptide-monitoring = { path = "../riptide-monitoring", features = ["collector"] }
riptide-facade = { path = "../riptide-facade" }  # Phase 2C.2: Circular dependency eliminated via trait abstraction
spider_chromiumoxide_cdp = { workspace = true }
spider_chrome = { workspace = true }
wasmtime = { workspace = true }
axum-prometheus = "0.7"
prometheus = "0.14"  # Updated to fix protobuf RUSTSEC-2024-0437
async-stream = "0.3"
base64 = "0.22"
hex = "0.4"
dashmap = { workspace = true }
serde_urlencoded = "0.7.1"
subtle = "2.5"
urlencoding = "2.1.3"
config = "0.14"  # Sprint 1.3: Configuration management
toml = "0.8"     # Sprint 1.3: TOML parsing for DI config
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }  # Sprint 1.3: PostgreSQL driver
# TODO Sprint 1.4: Add Redis connection pooling when riptide-cache idempotency is fixed
# deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }  # Sprint 1.3: Redis connection pooling

# jemalloc allocator for memory profiling (non-MSVC only)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }
tikv-jemalloc-ctl = { version = "0.5", optional = true }

[build-dependencies]
built = { version = "0.7", features = ["git2"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.8"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"
rstest = "0.22"
axum-extra = { version = "0.9" }
futures-util = "0.3"
tokio-tungstenite = "0.23"
http-body-util = "0.1"
serial_test = "3.2"
lazy_static = "1.4"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }

[features]
default = ["spider", "extraction", "fetch", "native-parser"]

# Core feature gates for optional dependencies
spider = ["dep:riptide-spider"]
extraction = ["dep:riptide-extraction"]
fetch = ["dep:riptide-fetch"]
browser = ["dep:riptide-browser", "dep:riptide-headless"]
llm = ["dep:riptide-intelligence"]
workers = ["dep:riptide-workers"]
search = ["dep:riptide-search"]

# PostgreSQL feature gate - wires production database adapters
postgres = ["riptide-persistence/postgres"]

# WIP feature gates for scaffolding code not yet fully wired
events = []           # EventEmitter/ResultTransformer in handlers/shared
sessions = []         # Session management system
streaming = []        # SSE/WebSocket/NDJSON streaming
telemetry = []        # Telemetry configuration
persistence = []      # Advanced caching and multi-tenancy with riptide-persistence
jemalloc = ["riptide-performance/jemalloc", "tikv-jemallocator", "tikv-jemalloc-ctl"]  # Real memory monitoring via riptide-performance's jemalloc
profiling-full = ["jemalloc", "riptide-performance/bottleneck-analysis-full"]  # Full profiling with flamegraphs (dev only)

# WASM Optional - Feature flags for extraction strategies
native-parser = ["extraction", "riptide-extraction/native-parser"]     # Native Rust parser (default, fast)
wasm-extractor = ["extraction", "riptide-extraction/wasm-extractor"]   # WASM-based extraction (opt-in)

# Full feature set for production (when ready)
full = ["spider", "extraction", "fetch", "browser", "llm", "workers", "search", "events", "sessions", "streaming", "telemetry", "persistence", "postgres", "jemalloc"]
