[package]
name = "riptide-browser-abstraction"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser engines - now using spider_chromiumoxide_cdp for consistency
spider_chromiumoxide_cdp = { workspace = true }
spider_chrome = { workspace = true, optional = true }

# Internal dependencies
riptide-types = { path = "../riptide-types" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []  # spider_chromiumoxide_cdp is now a required dependency
spider = ["spider_chrome"]    # Optional spider-chrome integration

# NOTE: spider_chromiumoxide_cdp 0.7.4 is compatible with spider_chrome
# No more version conflicts between chromiumoxide implementations
