[package]
name = "riptide-browser-abstraction"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser engines - using spider_chrome for all browser operations
spider_chrome = { workspace = true }

# Internal dependencies
riptide-types = { path = "../riptide-types" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

# NOTE: Using spider_chrome 2.37.128 for all browser operations
# This is spider's high-performance CDP implementation
