[package]
name = "riptide-browser"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified browser automation core for RipTide - browser pool management, CDP pooling, and launcher"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
thiserror = "2.0"

# Browser automation (spider-chrome workspace dependencies)
spider_chrome = { workspace = true }
spider_chromiumoxide_cdp = { workspace = true }

# RipTide internal dependencies
# Removed: riptide-browser-abstraction (now internal abstraction/ module)
# Note: Cannot depend on riptide-headless (circular dependency)
riptide-stealth = { path = "../riptide-stealth" }

# Temp directory management
tempfile = { workspace = true }

[features]
default = []
headless = []

[dev-dependencies]
serial_test = "3.2"

[lib]
path = "src/lib.rs"
