[package]
name = "riptide-cache"
version = "0.9.0"
edition = "2021"
authors = ["RipTide Team"]
description = "Cache management system for RipTide extraction framework"
license = "MIT"

[dependencies]
# Core dependencies
riptide-types = { path = "../riptide-types" }
riptide-pool = { path = "../riptide-pool" }
riptide-events = { path = "../riptide-events" }
riptide-extraction = { path = "../riptide-extraction" }
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis for distributed caching
redis = { workspace = true }

# Cryptography for cache keys
sha2 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for conditional caching
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"

# Collections
dashmap = "6.0"

# URL parsing for cache warming
url = "2.5"

# Directory utilities
dirs = "5.0"

# OnceCell for singletons
once_cell = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockito = "1.0"
tempfile = "3.0"

[features]
default = []
distributed = []
warming = []
