[package]
name = "riptide-cache"
version = "0.9.0"
edition = "2021"
authors = ["RipTide Team"]
description = "Cache management system for RipTide extraction framework"
license = "MIT"

[dependencies]
# Core dependencies
riptide-types = { path = "../riptide-types" }
riptide-pool = { path = "../riptide-pool" }
riptide-events = { path = "../riptide-events" }
# Phase 1: WASM Optional - Use native-parser by default
riptide-extraction = { path = "../riptide-extraction", default-features = false, features = ["css-extraction", "regex-extraction", "dom-utils", "chunking", "native-parser"] }
anyhow = "1.0"
# Phase 2: Circuit breaker dependencies
riptide-utils = { path = "../riptide-utils" }
riptide-intelligence = { path = "../riptide-intelligence" }
thiserror = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async traits (for CacheStorage implementation)
async-trait = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis for distributed caching
redis = { workspace = true }

# Redis connection pooling for IdempotencyStore (0.18 is compatible with redis 0.27.6)
deadpool-redis = { version = "=0.18.0", features = ["rt_tokio_1"], optional = true }

# Cryptography for cache keys
sha2 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for conditional caching
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"

# Collections
dashmap = "6.0"

# Synchronization primitives
parking_lot = "0.12"

# URL parsing for cache warming
url = "2.5"

# Directory utilities
dirs = "5.0"

# OnceCell for singletons
once_cell = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockito = "1.0"
tempfile = "3.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["redis"] }
anyhow = "1.0"

[features]
default = ["idempotency"]
distributed = []
warming = []
# Phase 1: WASM Optional - Feature flags for WASM functionality
wasm-pool = ["riptide-pool/wasm-pool"]
wasm-extractor = ["riptide-extraction/wasm-extractor"]
# Redis connection pooling for idempotency
idempotency = ["dep:deadpool-redis"]
