[package]
name = "riptide-cli"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for RipTide web crawler and content extraction"

[lib]
name = "riptide_cli"
path = "src/lib.rs"

[[bin]]
name = "riptide"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
url.workspace = true

# Local extraction support
riptide-extraction = { path = "../riptide-extraction" }
riptide-stealth = { path = "../riptide-stealth" }
riptide-pdf = { path = "../riptide-pdf" }
riptide-headless = { path = "../riptide-headless" }

# CLI-specific
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"
dialoguer = "0.11"
csv = "1.3"

# Utilities
chrono.workspace = true
humantime = "2.1"
urlencoding = "2.1"
env_logger.workspace = true
scraper = "0.20"
dirs = "5.0"
serde_yaml = "0.9"
ctrlc = "3.4"
rand = "0.8"
futures.workspace = true

# Metrics and observability
once_cell = "1.19"
opentelemetry = "0.24"
tracing.workspace = true

# System checks
num_cpus = "1.16"

# P2-F1 Day 4-5: Migrated from riptide-core to specific crates
riptide-types = { path = "../riptide-types" }
riptide-monitoring = { path = "../riptide-monitoring" }

# Phase 4 P0 Optimizations
sha2 = "0.10"
uuid.workspace = true
# Note: chromiumoxide types come from riptide-headless's dependency

[dev-dependencies]
tempfile = "3.13"

[features]
default = ["pdf"]
pdf = ["riptide-pdf/pdf"]
